--- a/Leaflet-Part-1/static/css/style.css
+++ b/Leaflet-Part-1/static/css/style.css
@@ -1,1 +1,24 @@
+body {
+  padding: 0;
+  margin: 0;
+}
 
+#map,
+body,
+html {
+  height: 100%;
+}
+
+.legend i {
+  width: 30px;
+  height: 15px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.8;
+}
+
+.info.legend {
+  background-color:white;
+  line-height: 18px;
+  padding: 10px;
+}
